kubernetes/deployments.yaml
apiVersion: v1
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: 2018-12-09T10:35:30Z
    generation: 1
    labels:
      run: books
    name: books
    namespace: default
    resourceVersion: "3593"
    selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/books
    uid: 266be638-fb9e-11e8-9dc4-e27b19de179a
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        run: books
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: books
      spec:
        containers:
        - image: petenorth/micronaut-books
          imagePullPolicy: Always
          name: books
          ports:
          - containerPort: 8082
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2018-12-09T10:35:30Z
      lastUpdateTime: 2018-12-09T10:35:30Z
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: 2018-12-09T10:35:30Z
      lastUpdateTime: 2018-12-09T10:35:49Z
      message: ReplicaSet "books-6cd4566f79" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: 2018-12-09T10:37:03Z
    generation: 3
    labels:
      run: gateway
    name: gateway
    namespace: default
    resourceVersion: "4012"
    selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/gateway
    uid: 5e4496fa-fb9e-11e8-9dc4-e27b19de179a
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        run: gateway
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: gateway
      spec:
        containers:
        - image: petenorth/micronaut-gateway
          imagePullPolicy: Always
          name: gateway
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2018-12-09T10:37:04Z
      lastUpdateTime: 2018-12-09T10:37:04Z
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: 2018-12-09T10:37:03Z
      lastUpdateTime: 2018-12-09T10:37:09Z
      message: ReplicaSet "gateway-67fdf7ccb5" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: 2018-12-09T10:36:42Z
    generation: 3
    labels:
      run: inventory
    name: inventory
    namespace: default
    resourceVersion: "4061"
    selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/inventory
    uid: 51539fdc-fb9e-11e8-9dc4-e27b19de179a
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        run: inventory
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          run: inventory
      spec:
        containers:
        - image: petenorth/micronaut-inventory
          imagePullPolicy: Always
          name: inventory
          ports:
          - containerPort: 8081
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: 2018-12-09T10:36:42Z
      lastUpdateTime: 2018-12-09T10:36:42Z
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: 2018-12-09T10:36:42Z
      lastUpdateTime: 2018-12-09T10:36:47Z
      message: ReplicaSet "inventory-58fdd6fd6b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 3
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
